--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -22,7 +22,10 @@ ext.versions = [
         hilt              : "2.33-beta",
 
         activityKtx       : "1.1.0",
-        fragmentKtx       : "1.3.2"
+        fragmentKtx       : "1.3.2",
+
+        retrofit          : "2.9.0",
+        gson              : "2.8.6"
 
 ]
 
@@ -49,13 +52,18 @@ ext.lib = [
                 fragment: "androidx.fragment:fragment-ktx:$versions.fragmentKtx"
         ],
 
-        kotlin         : "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
-
-        material       : "com.google.android.material:material:$versions.material",
-
         hilt           : [
                 plug : "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt",
                 imp  : "com.google.dagger:hilt-android:$versions.hilt",
                 kapet: "com.google.dagger:hilt-compiler:$versions.hilt"
-        ]
+        ],
+
+
+        kotlin         : "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
+
+        material       : "com.google.android.material:material:$versions.material",
+
+        retrofit       : "com.squareup.retrofit2:retrofit:$versions.retrofit",
+
+        gson           : "com.google.code.gson:gson:$versions.gson"
 ]
