--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -25,7 +25,9 @@ ext.versions = [
         fragmentKtx       : "1.3.2",
 
         retrofit          : "2.9.0",
-        gson              : "2.8.6"
+        retrofitRx        : "3.0.0",
+        gson              : "2.8.6",
+        gsonAdapter       : "2.9.0"
 
 ]
 
@@ -63,7 +65,11 @@ ext.lib = [
 
         material       : "com.google.android.material:material:$versions.material",
 
-        retrofit       : "com.squareup.retrofit2:retrofit:$versions.retrofit",
+        retrofit       : [
+                retrofit         : "com.squareup.retrofit2:retrofit:$versions.retrofit",
+                retrofitRxAdapter: "com.github.akarnokd:rxjava3-retrofit-adapter:$versions.retrofitRx",
+                gsonAdapter      : "com.squareup.retrofit2:converter-gson:$versions.gsonAdapter"
+        ],
 
         gson           : "com.google.code.gson:gson:$versions.gson"
 ]
