--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Simple_dictionary">
-        <activity android:name=".SingleActivity">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".SingleActivity"
+            android:theme="@style/LaunchingTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
