--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -7,6 +7,7 @@ ext.versions = [
         compileSdk          : 30,
 
         kotlin              : "1.3.72",
+        kotlinExt           : "1.3.2",
 
         navigation          : "2.3.5",
 
@@ -29,9 +30,15 @@ ext.versions = [
         gson                : "2.8.6",
         gsonAdapter         : "2.9.0",
 
-        fastAdapter         : '5.3.5',
-        glide               : '4.12.0',
+        fastAdapter         : "5.3.5",
+        glide               : "4.12.0",
         glideTransformations: "4.1.0",
+
+        junit               : "4.13.2",
+        junitExt            : "1.1.2",
+        espresso            : "3.3.0",
+
+        koreKtx             : "1.3.2"
 
 ]
 
@@ -59,12 +66,12 @@ ext.lib = [
         ],
 
         hilt           : [
-                plug : "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt",
-                imp  : "com.google.dagger:hilt-android:$versions.hilt",
-                kapet: "com.google.dagger:hilt-compiler:$versions.hilt"
+                plug: "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt",
+                imp : "com.google.dagger:hilt-android:$versions.hilt",
+                kapt: "com.google.dagger:hilt-compiler:$versions.hilt"
         ],
 
-        fastAdapter     : [
+        fastAdapter    : [
                 fastAdapter          : "com.mikepenz:fastadapter:$versions.fastAdapter",
                 fastadapterBindingExt: "com.mikepenz:fastadapter-extensions-binding:$versions.fastAdapter",
                 fastadapterUtils     : "com.mikepenz:fastadapter-extensions-utils:$versions.fastAdapter",
@@ -82,9 +89,21 @@ ext.lib = [
                 gsonAdapter      : "com.squareup.retrofit2:converter-gson:$versions.gsonAdapter"
         ],
 
+        junit          : [
+                junit   : "junit:junit:$versions.junit",
+                junitExt: "'androidx.test.ext:junit:$versions.junitExt'"
+        ],
+
         kotlin         : "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
 
         material       : "com.google.android.material:material:$versions.material",
 
-        gson           : "com.google.code.gson:gson:$versions.gson"
+        gson           : "com.google.code.gson:gson:$versions.gson",
+
+        espresso       : "androidx.test.espresso:espresso-core:$versions.espresso",
+
+        coreKtx        : "androidx.core:core-ktx:$versions.koreKtx",
+
+        kotlinStd      : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
 ]
